samples/_failures_safe/1761320353_1bf7c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_007d9486.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_007d9486.c:168:14: error: ‘TOKEN_OPER’ undeclared (first use in this function)
  168 |         case TOKEN_OPER
      |              ^~~~~~~~~~
./samples/SAFE/__tmp_007d9486.c:168:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_007d9486.c:168:9: error: expected ‘:’ or ‘...’ at end of input
  168 |         case TOKEN_OPER
      |         ^~~~
./samples/SAFE/__tmp_007d9486.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_007d9486.c:168:9: error: expected declaration or statement at end of input
